minor errors fixes : - SimplyBook to Simplybook - a transaprent  well for better contrast in banner - header menu items in labels ( might move it back after review)
fix bracket

--- a/src/Css/car-rentals.css
+++ b/src/Css/car-rentals.css
@@ -106,3 +106,7 @@
         margin-right: 0;
     }
 }
+
+.headerwell{
+    background-color: rgba(0,0,0,0.3);
+}
